// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VehiclePage /> component its snapshot matches story Default 1`] = `
.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.06rem 0;
  padding: 1rem 1.5rem;
}

.c29 {
  color: #161616;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font: 600 0.875rem/.875rem 'IBM Plex Sans',Arial,sans-serif,'Arial';
  line-height: 1;
}

.c29:hover {
  color: #161616;
}

.c30 {
  border: none;
  color: #161616;
  cursor: pointer;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
  margin: auto 0 auto auto;
}

.c30:hover {
  color: #161616;
}

.c31 {
  background: #ffffff;
  display: none;
}

.c33 {
  background: #ffffff;
  display: none;
  display: block;
}

.c32 {
  color: #161616;
  cursor: pointer;
  display: block;
  font: 700 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  padding: 1rem 1rem 1rem calc(2 * 1.5rem);
}

.c32:hover {
  background: #f4f4f4;
  color: #0043ce;
}

.c32.isActive {
  background: #f4f4f4;
  color: #0043ce;
}

.c32.isActive:hover {
  background: #f4f4f4;
  color: #0043ce;
}

.c61 {
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c62 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #000;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem !important;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 0 0 0.5rem;
  outline: none;
  width: 2rem !important;
}

.c62 svg {
  color: white;
  height: 1.1rem;
  width: 1.1rem;
}

.c62:hover,
.c62:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
}

.c24 {
  display: none;
  text-transform: capitalize;
  margin-bottom: 1.5rem;
}

.c24 .cds--breadcrumb-item {
  display: none;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  color: #0f62fe;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: bold 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c37:hover {
  color: #0043ce;
}

.c37 svg {
  color: #161616;
}

.c26 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c26 svg {
  max-height: 100%;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem 1rem 0 1rem;
  width: 100%;
}

.c36 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

.c38 {
  padding: 1rem 1rem 1rem 1rem;
  width: 100%;
}

.c40 {
  padding: 1rem 1rem 1rem 1rem;
  width: 100%;
  border-top: 0.125rem solid #e0e0e0;
  color: #525252;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  padding-top: 1rem;
}

.c34 {
  background-color: #f4f4f4;
  border: 0.5rem solid #0062ff 0.125rem solid rgba(0,0,0,0.1) 0.125rem solid rgba(0,0,0,0.1) 0.125rem solid rgba(0,0,0,0.1);
  border-radius: 0.25rem;
  box-shadow: none;
  font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  max-width: var(--max-width);
}

.c22 .cds--row > * > .cds--grid {
  padding-left: 0;
  padding-right: 0;
}

.c51 {
  background: #dcdcdc;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c52 {
  max-width: var(--max-width);
  margin: 0 auto;
}

.c53 {
  color: #525252;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 1rem;
}

.c54 {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr 1fr;
}

.c59 {
  color: #525252;
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  outline: none;
}

.c59:hover,
.c59:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c55 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c60 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 2rem;
}

.c56 {
  font: 600 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  text-align: left;
}

.c57 {
  list-style: none;
}

.c58 {
  margin: 0.75rem 0 0;
}

.c63 {
  font: 400 0.74375rem 'IBM Plex Sans',Arial,sans-serif;
  width: 100%;
  padding: 1rem 2rem;
}

.c64 {
  border-top: 1px solid #e0e0e0;
  padding: 0.5rem 0.5rem;
}

.c27 {
  height: 1.5rem;
}

.c21 {
  height: 1rem;
}

.c45 {
  height: 6rem;
}

.c3 {
  border-bottom: 1px solid #e0e0e0;
  background: #fff;
  color: #161616;
}

.c4 {
  display: grid;
  grid-template-areas: 'menu-toggle logo title secondary search actions';
  grid-template-columns: auto auto auto auto 1fr auto;
  grid-template-rows: 1fr;
  min-height: 3rem;
  max-width: var(--max-width);
  margin-left: auto;
  margin-right: auto;
}

.c4 .action {
  border: none;
  color: #161616;
  cursor: pointer;
}

.c4 .action [role='img'] {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 .action [role='img'] svg {
  color: #161616;
  height: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: actions;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem;
}

.c15 .action {
  padding: 0.875rem;
}

.c15 .action:not(.has-icon) {
  font-size: 0.875rem;
  color: #0f62fe;
}

.c15 .action:not(.has-icon):hover {
  color: #0043ce;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15 .action.has-icon {
  font-size: 0;
}

.c15 .hide-mobile {
  display: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: search;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c14 .cds--search {
  margin-left: 1rem;
  width: 100%;
}

.c14 .cds--search,
.c14 .cds--search-input {
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: logo;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c9 .action {
  font-size: 0;
}

.c9 img,
.c9 svg {
  width: 3rem;
  height: 2rem;
  max-width: 3rem;
  max-height: 2rem;
}

.c11 {
  display: grid;
  grid-template-columns: min-content 10fr min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-left: 1rem;
}

.c10 {
  grid-area: secondary;
  display: none;
  position: relative;
}

.c13 {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  margin-right: 2px;
}

.c13::-webkit-scrollbar {
  display: none;
}

.c13 .action {
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  padding: 0.25rem 1rem;
  white-space: nowrap;
}

.c13 .action [role='img'] {
  display: none;
}

.c5 {
  grid-area: menu-toggle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 .action {
  height: 100%;
  padding: 0.875rem;
  margin: 0 0.5rem 0 0;
}

.c6 {
  background-color: white;
  bottom: 0;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 2rem;
  position: fixed;
  top: 0;
  -webkit-transition: -webkit-transform 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out;
  transition: transform 0.25s ease-out;
  width: 100vw;
  z-index: 16;
  left: calc(-100vw - 1rem);
  max-width: 80vw;
}

.c6 ~ .SidePanelstyles__SidePanelMain-sc-18iyri2-0 {
  -webkit-transition: -webkit-transform 0.25s ease-out,margin 0.25s ease-out;
  -webkit-transition: transform 0.25s ease-out,margin 0.25s ease-out;
  transition: transform 0.25s ease-out,margin 0.25s ease-out;
}

.c7 {
  display: grid;
  gap: 1rem;
  grid-template-areas: 'secondary' 'primary';
  grid-template-rows: auto auto;
  padding: 0 2rem;
  font: 600 0.875rem/1.2499987499999998rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
}

.c7 .action {
  font: 600 0.875rem/1.2499987499999998rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  color: #525252;
  border: none;
}

.c7 .action [role='img'] {
  display: inline;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1rem;
  grid-area: primary;
}

.c8 .action {
  padding: 0;
}

.c2 {
  border: 0.5rem solid #161616;
  border-width: 0.5rem 0 0 0;
  box-shadow: 0 0.06rem 0.5rem #d8d8d8;
  margin-top: var(--top);
  top: var(--top);
}

.c19 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 .notification-entry {
  -webkit-animation: exoFadeIn 70ms cubic-bezier(0,0,0.38,0.9);
  animation: exoFadeIn 70ms cubic-bezier(0,0,0.38,0.9);
  margin-bottom: 0;
  position: relative;
}

.c0 {
  background-color: unset;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c50 {
  width: 100%;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 5;
}

.c18 {
  max-height: 100vh;
  overflow: auto;
  position: absolute;
  right: 0;
  width: 100%;
  z-index: 5;
}

.c20 {
  background-color: #f4f4f4;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-height: 50rem;
  padding: 0;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem;
  position: relative;
  width: 3rem;
}

.c17 {
  height: 100%;
  width: 100%;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c25 {
  margin-left: auto;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 0;
  width: 100%;
}

.c43 {
  font-weight: bold;
}

.c44 {
  margin-left: auto;
  text-align: right;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c39 {
  line-height: 1.5;
  margin-bottom: 1rem;
}

.c47 {
  display: grid;
  grid-template-columns: 3rem 1fr auto;
  padding: 1rem;
}

.c47 .title {
  font-weight: bold;
  margin-bottom: 0.5rem;
}

.c48 {
  background-image: url(/static/images/products/thumbnails/PremiumChargingSubscription.png);
  background-position: center;
  background-size: cover;
  height: 100%;
  width: 100%;
}

.c49 {
  margin-left: 1rem;
}

.c46 {
  background: #ffffff;
  -webkit-flex: 2 1;
  -ms-flex: 2 1;
  flex: 2 1;
  margin: 1rem;
}

@media (min-width:672px) {
  .c61 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:1056px) {
  .c61 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    margin-top: 0;
  }
}

@media (min-width:672px) {
  .c24 {
    display: block;
    margin-bottom: 2rem;
  }

  .c24 .cds--breadcrumb-item {
    display: inline;
  }
}

@media (max-width:672px) {
  .c24 {
    display: block;
  }

  .c24 .cds--breadcrumb-item:nth-last-child(2) {
    display: inline;
  }

  .c24 .cds--breadcrumb-item:nth-last-child(2)::after {
    content: '';
  }

  .c24 .cds--breadcrumb-item:nth-last-child(2)::before {
    color: #161616;
    content: '<';
    margin-right: 0.5rem;
  }
}

@media (min-width:320px) {
  .c53 {
    padding: 1rem 2rem 2rem;
  }
}

@media (min-width:672px) {
  .c54 {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (min-width:672px) {
  .c60 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media (min-width:672px) {
  .c58 {
    margin: 0.5rem 0 0;
  }
}

@media (min-width:672px) {
  .c15 .hide-desktop {
    display: none;
  }

  .c15 .hide-mobile {
    display: block;
  }
}

@media (max-width:672px) {
  .c14:not(:empty) {
    position: absolute;
    left: 0;
    right: 0;
    top: var(--top);
    bottom: 0;
    z-index: 100;
  }

  .c14:not(:empty) .cds--search {
    margin: 0;
    width: 100%;
  }
}

@media (min-width:672px) {

}

@media (min-width:672px) {
  .c9 {
    padding: 0 0 0 1rem;
  }
}

@media (min-width:672px) {
  .c10 {
    display: block;
    margin-left: 2rem;
  }

  .c10:before {
    content: '';
    position: absolute;
    border-left: 1px solid #e0e0e0;
    left: 0;
    top: 0.75rem;
    bottom: 0.75rem;
  }
}

@media (min-width:672px) {
  .c12 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    overflow: hidden;
  }

  .c12:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 1rem;
    background: linear-gradient( 90deg,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 100% );
    top: 0;
    left: 0;
    z-index: 100;
  }

  .c12:after {
    content: '';
    position: absolute;
    height: 100%;
    width: 1rem;
    background: linear-gradient( -90deg,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 100% );
    top: 0;
    right: 0;
    z-index: 100;
  }
}

@media (min-width:672px) {
  .c5 {
    display: none;
  }
}

@media (min-width:672px) {
  .c6 {
    width: 20rem;
    left: calc(-20rem - 1rem);
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <button
                aria-label="Toggle"
                class="action  has-icon"
              >
                <div
                  role="img"
                >
                  <svg
                    aria-label="icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    size="20"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </div>
              </button>
              <div
                class="c6"
                mode="onTop"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8"
                  >
                    <a
                      aria-label="Apparel"
                      class="action  "
                      href="/catalog/category/Apparel_1"
                    >
                      Apparel
                    </a>
                    <a
                      aria-label="Electronics"
                      class="action  "
                      href="/catalog/category/Electronics_6"
                    >
                      Electronics
                    </a>
                    <a
                      aria-label="Grocery"
                      class="action  "
                      href="/catalog/category/Grocery_7"
                    >
                      Grocery
                    </a>
                    <a
                      aria-label="Health"
                      class="action  "
                      href="/catalog/category/Health_8"
                    >
                      Health
                    </a>
                    <a
                      aria-label="Home & Furnishing"
                      class="action  "
                      href="/catalog/category/Home-Furnishings_9"
                    >
                      Home & Furnishing
                    </a>
                    <a
                      aria-label="Newsletters & Magazines"
                      class="action  "
                      href="/catalog/category/NewslettersAndMagazines_10"
                    >
                      Newsletters & Magazines
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c9"
            >
              <a
                aria-label="Logo"
                class="action  has-icon"
                href="/"
              >
                <div
                  role="img"
                >
                  <test-file-stub />
                </div>
              </a>
            </div>
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <div />
                <div
                  class="c12"
                >
                  <div
                    class="c13"
                  >
                    <a
                      aria-label="Apparel"
                      class="action  "
                      href="/catalog/category/Apparel_1"
                    >
                      Apparel
                    </a>
                    <a
                      aria-label="Electronics"
                      class="action  "
                      href="/catalog/category/Electronics_6"
                    >
                      Electronics
                    </a>
                    <a
                      aria-label="Grocery"
                      class="action  "
                      href="/catalog/category/Grocery_7"
                    >
                      Grocery
                    </a>
                    <a
                      aria-label="Health"
                      class="action  "
                      href="/catalog/category/Health_8"
                    >
                      Health
                    </a>
                    <a
                      aria-label="Home & Furnishing"
                      class="action  "
                      href="/catalog/category/Home-Furnishings_9"
                    >
                      Home & Furnishing
                    </a>
                    <a
                      aria-label="Newsletters & Magazines"
                      class="action  "
                      href="/catalog/category/NewslettersAndMagazines_10"
                    >
                      Newsletters & Magazines
                    </a>
                  </div>
                </div>
                <div />
              </div>
            </div>
            <div
              class="c14"
            />
            <div
              class="c15"
            >
              <button
                class="action  has-icon"
              >
                <div
                  role="img"
                >
                  <svg
                    aria-label="icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    size="20"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </div>
              </button>
              <a
                aria-label="Sign in"
                class="action  has-icon"
                href="/auth/login"
              >
                Sign in
                <div
                  role="img"
                >
                  <svg
                    aria-label="icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    size="20"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </div>
              </a>
              <button
                aria-label="EN"
                class="action  has-icon"
              >
                EN
                <div
                  role="img"
                >
                  <svg
                    aria-label="icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    size="20"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </div>
              </button>
              <a
                class="c16"
                href="/cart/cart"
              >
                <svg
                  class="c17"
                  fill="#000"
                  stroke="#000"
                  stroke-width="2"
                  viewBox="0 0 50 50"
                >
                  <path
                    d="M42.1 23s-2.6-5.4-4.2-8.3c-1.6-2.9-6.5-3.1-12.9-3.1s-11.3.2-12.9 3L8 23"
                    fill="none"
                  />
                  <path
                    d="M47 31.7c-.3 3.8.3 8.6-8 7.5S28.6 38 25 38s-5.5 0-14 1-7.7-3.6-7.9-7.4C3 28 4.3 24.3 6.1 23s11.2-1.8 19-1.8 17.1.5 18.9 1.8 3.2 5 3 8.7zM8 22l-1-2s-4.6-.4-4 1c.5 1 4 1 4 1m36 0s3.5 0 4-1c.6-1.4-4-1-4-1l-1 2"
                  />
                  <rect
                    height="9"
                    rx="1.2"
                    width="7"
                    x="4"
                    y="33"
                  />
                  <rect
                    height="9"
                    rx="1.2"
                    width="7"
                    x="39"
                    y="33"
                  />
                  <g
                    fill="#333"
                    stroke="none"
                  >
                    <path
                      d="M43 32h-5c-.6-1.2.2-1.8 1-2 1-.3 6-1 6-1s.6 3-2 3zM7 32h5c.6-1.2-.2-1.8-1-2-1-.3-6-1-6-1s-.6 3 2 3z"
                    />
                    <rect
                      height="1"
                      rx="1"
                      width="5"
                      x="7"
                      y="35"
                    />
                    <rect
                      height="1"
                      rx="1"
                      width="5"
                      x="38"
                      y="35"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18 notifications-wrapper"
      >
        <div
          class="c19 notifications"
        />
      </div>
    </div>
    <div
      class="c20"
    >
      <div
        class="Dashboardstyles__Dashboard-sc-1v5m1ld-0"
      >
        <div
          class="c21"
        />
        <div
          class="c22 cds--grid"
        >
          <div
            class="cds--row"
          >
            <div
              class="cds--col"
            >
              <div
                class="c23"
              >
                <nav
                  aria-label="Breadcrumb"
                  class="c24"
                >
                  <ol
                    class="cds--breadcrumb cds--breadcrumb--no-trailing-slash"
                  >
                    <li
                      class="cds--breadcrumb-item"
                    >
                      <a
                        class="cds--link"
                        href="/"
                        title="Home"
                      >
                        Home
                      </a>
                    </li>
                    <li
                      class="cds--breadcrumb-item"
                    >
                      <a
                        class="cds--link"
                        href="/account-automotive"
                        title="account automotive"
                      >
                        account automotive
                      </a>
                    </li>
                    <li
                      class="cds--breadcrumb-item cds--breadcrumb-item--current"
                    >
                      <a
                        class="cds--link"
                        href="/account-automotive/vehicle"
                        title="Vehicle Dashboard"
                      >
                        Vehicle Dashboard
                      </a>
                    </li>
                  </ol>
                </nav>
                <div
                  class="c25"
                >
                  <button
                    class="c26 cds--btn cds--btn--primary"
                    tabindex="0"
                    type="button"
                  >
                    Logout
                     
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cds--row"
          >
            <div
              class="cds--col"
            >
              <div
                class="c27"
              />
            </div>
          </div>
          <div
            class="cds--row"
          >
            <div
              class="cds--col-md-8 cds--col-lg-4"
            >
              <div
                class="Menustyles__Menu-sc-1ys5v2t-0"
              >
                <div
                  class="c28"
                >
                  <a
                    class="c29"
                    href="/account-profile"
                  >
                    My profile
                  </a>
                  <button
                    class="c30"
                  >
                    <svg
                      aria-label="icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      size="24"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="c31"
                >
                  <div
                    class="Menustyles__Items-sc-1ys5v2t-5"
                  >
                    <a
                      class="c32"
                      href="/account-profile/profile"
                    >
                      Profile
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/details"
                    >
                      Personal details
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/orders"
                    >
                      My orders
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/security"
                    >
                      Account security
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/addresses"
                    >
                      Manage addresses
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/preferences"
                    >
                      Preferences
                    </a>
                    <a
                      class="c32"
                      href="/account-profile/payment"
                    >
                      Payment methods
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="Menustyles__Menu-sc-1ys5v2t-0"
              >
                <div
                  class="c28"
                >
                  <a
                    class="c29"
                    href="/account-automotive"
                  >
                    My car
                  </a>
                  <button
                    class="c30"
                  >
                    <svg
                      aria-label="icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      size="24"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="c33"
                >
                  <div
                    class="Menustyles__Items-sc-1ys5v2t-5"
                  >
                    <a
                      class="c32"
                      href="/account-automotive/profile"
                    >
                      Overview
                    </a>
                    <a
                      class="c32 isActive"
                      href="/account-automotive/vehicle"
                    >
                      Vehicle dashboard
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/orders"
                    >
                      Order History
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/configurations"
                    >
                      Saved configurations
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/messages"
                    >
                      Messages
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/subscriptions"
                    >
                      My subscriptions
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/payments"
                    >
                      My payments
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/lease"
                    >
                      My lease
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/documents"
                    >
                      My documents
                    </a>
                    <a
                      class="c32"
                      href="/account-automotive/visit-dealer"
                    >
                      Visit Dealer
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="cds--col-md-8 cds--col-lg-12"
            >
              <h1>
                Vehicle Dashboard
              </h1>
              <div
                class="c21"
              />
              <div
                class="cds--layer-two c34"
              >
                <h4
                  class="c35"
                >
                  Marty McFly's car
                  <div
                    class="c36"
                  >
                    <a
                      class="c37"
                    >
                      Edit
                    </a>
                  </div>
                </h4>
                <div
                  class="c38 card-section-undefined"
                >
                  <div
                    class="c39"
                  >
                    DMCDeLorean is a classic sports car giving you unmatched speed and precise controls.The DeLorean coupe combines a thrilling mix of retro feel, gull-wing doors, and V6 PRV engine technology that gives you unmatched speed with precise controls.
                  </div>
                </div>
                <div
                  class="c40 card-section-secondary"
                  type="secondary"
                >
                  <div
                    class="c41"
                  >
                    <div
                      class="c42"
                    >
                      <div
                        class="c43"
                      >
                        Total Distance
                      </div>
                      <div
                        class="c44"
                      >
                        36000 km
                      </div>
                    </div>
                    <div
                      class="c42"
                    >
                      <div
                        class="c43"
                      >
                        Car Review
                      </div>
                      <div
                        class="c44"
                      >
                        12/05/2020
                      </div>
                    </div>
                    <div
                      class="c42"
                    >
                      <div
                        class="c43"
                      >
                        Car Insurance
                      </div>
                      <div
                        class="c44"
                      >
                        12/05/2020
                      </div>
                    </div>
                    <div
                      class="c42"
                    >
                      <div
                        class="c43"
                      >
                        Year
                      </div>
                      <div
                        class="c44"
                      >
                        2020
                      </div>
                    </div>
                    <div
                      class="c42"
                    >
                      <div
                        class="c43"
                      >
                        Weight
                      </div>
                      <div
                        class="c44"
                      >
                        56.00 lb
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c45"
              />
              <div
                class="cds--layer-two c34"
              >
                <h4
                  class="c35"
                >
                  Your subscriptions
                  <div
                    class="c36"
                  >
                    <a
                      class="c37"
                    >
                      See more subscriptions
                    </a>
                  </div>
                </h4>
                <div
                  class="c38 card-section-undefined"
                >
                  <div
                    class="c46"
                  >
                    <div
                      class="c47"
                    >
                      <div>
                        <div
                          class="c48"
                        />
                      </div>
                      <div
                        class="c49"
                      >
                        <div
                          class="title"
                        >
                          Charging Plan
                        </div>
                        <div
                          class="subtitle"
                        >
                          11873
                        </div>
                      </div>
                      <div>
                        <a
                          class="c37"
                        >
                          See details
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c21"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c50"
    >
      <footer
        class="c51"
      >
        <div
          class="Footerstyles__ContentPanel-sc-e4rj2m-3"
        >
          <div
            class="c52"
          >
            <div
              class="c53"
            >
              <div
                class="c54"
              >
                <div
                  class="c55"
                >
                  <h2
                    class="c56"
                  >
                    Help & Information
                  </h2>
                  <ul
                    class="c57"
                  >
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        Help
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        Track Order
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        Delivery & Returns
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="/store-finder/store-finder"
                      >
                        Our Stores
                      </a>
                    </li>
                  </ul>
                </div>
                <div
                  class="c55"
                >
                  <h2
                    class="c56"
                  >
                    About
                  </h2>
                  <ul
                    class="c57"
                  >
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        Our Products
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        About Us
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="/content/contact"
                      >
                        Contact Us
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="#"
                      >
                        Careers
                      </a>
                    </li>
                    <li
                      class="c58"
                    >
                      <a
                        class="c59"
                        href="/wishlist/wishlist"
                      >
                        Wishlist
                      </a>
                    </li>
                  </ul>
                </div>
                <div
                  class="c55 c60"
                >
                  <div
                    class="c61"
                  >
                    <button
                      aria-label="Facebook"
                      class="c62"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="Twitter"
                      class="c62"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="YouTube"
                      class="c62"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="LinkedIn"
                      class="c62"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="Instagram"
                      class="c62"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Footerstyles__TermsPanel-sc-e4rj2m-12"
        >
          <div
            class="c52"
          >
            <div
              class="c63"
            >
              <div
                class="c64"
              >
                Copyright © 2022 IBM All rights reserved.
              </div>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`<VehiclePage /> component its snapshot matches story Loading 1`] = `
.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.06rem 0;
  padding: 1rem 1.5rem;
}

.c20 {
  color: #161616;
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font: 600 0.875rem/.875rem 'IBM Plex Sans',Arial,sans-serif,'Arial';
  line-height: 1;
}

.c20:hover {
  color: #161616;
}

.c21 {
  border: none;
  color: #161616;
  cursor: pointer;
  -webkit-flex: 0 0 1.5rem;
  -ms-flex: 0 0 1.5rem;
  flex: 0 0 1.5rem;
  margin: auto 0 auto auto;
}

.c21:hover {
  color: #161616;
}

.c22 {
  background: #ffffff;
  display: none;
}

.c24 {
  background: #ffffff;
  display: none;
  display: block;
}

.c23 {
  color: #161616;
  cursor: pointer;
  display: block;
  font: 700 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  padding: 1rem 1rem 1rem calc(2 * 1.5rem);
}

.c23:hover {
  background: #f4f4f4;
  color: #0043ce;
}

.c23.isActive {
  background: #f4f4f4;
  color: #0043ce;
}

.c23.isActive:hover {
  background: #f4f4f4;
  color: #0043ce;
}

.c48 {
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c49 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #000;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem !important;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 0 0 0.5rem;
  outline: none;
  width: 2rem !important;
}

.c49 svg {
  color: white;
  height: 1.1rem;
  width: 1.1rem;
}

.c49:hover,
.c49:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
}

.c15 {
  display: none;
  text-transform: capitalize;
  margin-bottom: 1.5rem;
}

.c15 .cds--breadcrumb-item {
  display: none;
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  color: #0f62fe;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: bold 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c28:hover {
  color: #0043ce;
}

.c28 svg {
  color: #161616;
}

.c17 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c17 svg {
  max-height: 100%;
}

.c26 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem 1rem 0 1rem;
  width: 100%;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

.c29 {
  padding: 1rem 1rem 1rem 1rem;
  width: 100%;
}

.c31 {
  padding: 1rem 1rem 1rem 1rem;
  width: 100%;
  border-top: 0.125rem solid #e0e0e0;
  color: #525252;
  font: 400 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  padding-top: 1rem;
}

.c25 {
  background-color: #f4f4f4;
  border: 0.5rem solid #0062ff 0.125rem solid rgba(0,0,0,0.1) 0.125rem solid rgba(0,0,0,0.1) 0.125rem solid rgba(0,0,0,0.1);
  border-radius: 0.25rem;
  box-shadow: none;
  font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  max-width: var(--max-width);
}

.c13 .cds--row > * > .cds--grid {
  padding-left: 0;
  padding-right: 0;
}

.c38 {
  background: #dcdcdc;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c39 {
  max-width: var(--max-width);
  margin: 0 auto;
}

.c40 {
  color: #525252;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 1rem;
}

.c41 {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr 1fr;
}

.c46 {
  color: #525252;
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  outline: none;
}

.c46:hover,
.c46:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c42 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c47 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 2rem;
}

.c43 {
  font: 600 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  text-align: left;
}

.c44 {
  list-style: none;
}

.c45 {
  margin: 0.75rem 0 0;
}

.c50 {
  font: 400 0.74375rem 'IBM Plex Sans',Arial,sans-serif;
  width: 100%;
  padding: 1rem 2rem;
}

.c51 {
  border-top: 1px solid #e0e0e0;
  padding: 0.5rem 0.5rem;
}

.c18 {
  height: 1.5rem;
}

.c12 {
  height: 1rem;
}

.c36 {
  height: 6rem;
}

.c3 {
  border-bottom: 1px solid #e0e0e0;
  background: #fff;
  color: #161616;
}

.c4 {
  display: grid;
  grid-template-areas: 'menu-toggle logo title secondary search actions';
  grid-template-columns: auto auto auto auto 1fr auto;
  grid-template-rows: 1fr;
  min-height: 3rem;
  max-width: var(--max-width);
  margin-left: auto;
  margin-right: auto;
}

.c4 .action {
  border: none;
  color: #161616;
  cursor: pointer;
}

.c4 .action [role='img'] {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 .action [role='img'] svg {
  color: #161616;
  height: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: actions;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem;
}

.c8 .action {
  padding: 0.875rem;
}

.c8 .action:not(.has-icon) {
  font-size: 0.875rem;
  color: #0f62fe;
}

.c8 .action:not(.has-icon):hover {
  color: #0043ce;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 .action.has-icon {
  font-size: 0;
}

.c8 .hide-mobile {
  display: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: search;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 .cds--search {
  margin-left: 1rem;
  width: 100%;
}

.c7 .cds--search,
.c7 .cds--search-input {
  height: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: logo;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  padding: 0 0 0 1rem;
}

.c6 .action {
  font-size: 0;
}

.c6 img,
.c6 svg {
  width: 3rem;
  height: 2rem;
  max-width: 3rem;
  max-height: 2rem;
}

.c5 {
  grid-area: menu-toggle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 .action {
  height: 100%;
  padding: 0.875rem;
  margin: 0 0.5rem 0 0;
}

.c2 {
  border: 0.5rem solid #161616;
  border-width: 0.5rem 0 0 0;
  box-shadow: 0 0.06rem 0.5rem #d8d8d8;
  margin-top: var(--top);
  top: var(--top);
}

.c10 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 .notification-entry {
  -webkit-animation: exoFadeIn 70ms cubic-bezier(0,0,0.38,0.9);
  animation: exoFadeIn 70ms cubic-bezier(0,0,0.38,0.9);
  margin-bottom: 0;
  position: relative;
}

.c0 {
  background-color: unset;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c37 {
  width: 100%;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 5;
}

.c9 {
  max-height: 100vh;
  overflow: auto;
  position: absolute;
  right: 0;
  width: 100%;
  z-index: 5;
}

.c11 {
  background-color: #f4f4f4;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-height: 50rem;
  padding: 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  margin-left: auto;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 0;
  width: 100%;
}

.c34 {
  font-weight: bold;
}

.c35 {
  margin-left: auto;
  text-align: right;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c30 {
  line-height: 1.5;
  margin-bottom: 1rem;
}

@media (min-width:672px) {
  .c48 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media (min-width:1056px) {
  .c48 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    margin-top: 0;
  }
}

@media (min-width:672px) {
  .c15 {
    display: block;
    margin-bottom: 2rem;
  }

  .c15 .cds--breadcrumb-item {
    display: inline;
  }
}

@media (max-width:672px) {
  .c15 {
    display: block;
  }

  .c15 .cds--breadcrumb-item:nth-last-child(2) {
    display: inline;
  }

  .c15 .cds--breadcrumb-item:nth-last-child(2)::after {
    content: '';
  }

  .c15 .cds--breadcrumb-item:nth-last-child(2)::before {
    color: #161616;
    content: '<';
    margin-right: 0.5rem;
  }
}

@media (min-width:320px) {
  .c40 {
    padding: 1rem 2rem 2rem;
  }
}

@media (min-width:672px) {
  .c41 {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (min-width:672px) {
  .c47 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@media (min-width:672px) {
  .c45 {
    margin: 0.5rem 0 0;
  }
}

@media (min-width:672px) {
  .c8 .hide-desktop {
    display: none;
  }

  .c8 .hide-mobile {
    display: block;
  }
}

@media (max-width:672px) {
  .c7:not(:empty) {
    position: absolute;
    left: 0;
    right: 0;
    top: var(--top);
    bottom: 0;
    z-index: 100;
  }

  .c7:not(:empty) .cds--search {
    margin: 0;
    width: 100%;
  }
}

@media (min-width:672px) {
  .c6 {
    padding: 0 0 0 1rem;
  }
}

@media (min-width:672px) {
  .c5 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            />
            <div
              class="c6"
            >
              <a
                class="action  has-icon"
                href="/"
              >
                <div
                  role="img"
                >
                  <test-file-stub />
                </div>
              </a>
            </div>
            <div
              class="c7"
            />
            <div
              class="c8"
            />
          </div>
        </div>
      </div>
      <div
        class="c9 notifications-wrapper"
      >
        <div
          class="c10 notifications"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      <div
        class="Dashboardstyles__Dashboard-sc-1v5m1ld-0"
      >
        <div
          class="c12"
        />
        <div
          class="c13 cds--grid"
        >
          <div
            class="cds--row"
          >
            <div
              class="cds--col"
            >
              <div
                class="c14"
              >
                <nav
                  aria-label="Breadcrumb"
                  class="c15"
                >
                  <ol
                    class="cds--breadcrumb cds--breadcrumb--no-trailing-slash"
                  >
                    <li
                      class="cds--breadcrumb-item"
                    >
                      <a
                        class="cds--link"
                        href="/"
                        title="Home"
                      >
                        Home
                      </a>
                    </li>
                    <li
                      class="cds--breadcrumb-item"
                    >
                      <a
                        class="cds--link"
                        href="/account-automotive"
                        title="account automotive"
                      >
                        account automotive
                      </a>
                    </li>
                    <li
                      class="cds--breadcrumb-item cds--breadcrumb-item--current"
                    >
                      <a
                        class="cds--link"
                        href="/account-automotive/vehicle"
                        title="Vehicle Dashboard"
                      >
                        Vehicle Dashboard
                      </a>
                    </li>
                  </ol>
                </nav>
                <div
                  class="c16"
                >
                  <button
                    class="c17 cds--btn cds--btn--primary"
                    tabindex="0"
                    type="button"
                  >
                    Logout
                     
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cds--row"
          >
            <div
              class="cds--col"
            >
              <div
                class="c18"
              />
            </div>
          </div>
          <div
            class="cds--row"
          >
            <div
              class="cds--col-md-8 cds--col-lg-4"
            >
              <div
                class="Menustyles__Menu-sc-1ys5v2t-0"
              >
                <div
                  class="c19"
                >
                  <a
                    class="c20"
                    href="/account-profile"
                  >
                    My profile
                  </a>
                  <button
                    class="c21"
                  >
                    <svg
                      aria-label="icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      size="24"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="c22"
                >
                  <div
                    class="Menustyles__Items-sc-1ys5v2t-5"
                  >
                    <a
                      class="c23"
                      href="/account-profile/profile"
                    >
                      Profile
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/details"
                    >
                      Personal details
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/orders"
                    >
                      My orders
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/security"
                    >
                      Account security
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/addresses"
                    >
                      Manage addresses
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/preferences"
                    >
                      Preferences
                    </a>
                    <a
                      class="c23"
                      href="/account-profile/payment"
                    >
                      Payment methods
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="Menustyles__Menu-sc-1ys5v2t-0"
              >
                <div
                  class="c19"
                >
                  <a
                    class="c20"
                    href="/account-automotive"
                  >
                    My car
                  </a>
                  <button
                    class="c21"
                  >
                    <svg
                      aria-label="icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      size="24"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </button>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class="Menustyles__Items-sc-1ys5v2t-5"
                  >
                    <a
                      class="c23"
                      href="/account-automotive/profile"
                    >
                      Overview
                    </a>
                    <a
                      class="c23 isActive"
                      href="/account-automotive/vehicle"
                    >
                      Vehicle dashboard
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/orders"
                    >
                      Order History
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/configurations"
                    >
                      Saved configurations
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/messages"
                    >
                      Messages
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/subscriptions"
                    >
                      My subscriptions
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/payments"
                    >
                      My payments
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/lease"
                    >
                      My lease
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/documents"
                    >
                      My documents
                    </a>
                    <a
                      class="c23"
                      href="/account-automotive/visit-dealer"
                    >
                      Visit Dealer
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="cds--col-md-8 cds--col-lg-12"
            >
              <h1>
                Vehicle Dashboard
              </h1>
              <div
                class="c12"
              />
              <div
                class="cds--layer-two c25"
              >
                <h4
                  class="c26"
                >
                  Marty McFly's car
                  <div
                    class="c27"
                  >
                    <a
                      class="c28"
                    >
                      Edit
                    </a>
                  </div>
                </h4>
                <div
                  class="c29 card-section-undefined"
                >
                  <div
                    class="c30"
                  >
                    DMCDeLorean is a classic sports car giving you unmatched speed and precise controls.The DeLorean coupe combines a thrilling mix of retro feel, gull-wing doors, and V6 PRV engine technology that gives you unmatched speed with precise controls.
                  </div>
                </div>
                <div
                  class="c31 card-section-secondary"
                  type="secondary"
                >
                  <div
                    class="c32"
                  >
                    <div
                      class="c33"
                    >
                      <div
                        class="c34"
                      >
                        Total Distance
                      </div>
                      <div
                        class="c35"
                      >
                        36000 km
                      </div>
                    </div>
                    <div
                      class="c33"
                    >
                      <div
                        class="c34"
                      >
                        Car Review
                      </div>
                      <div
                        class="c35"
                      >
                        12/05/2020
                      </div>
                    </div>
                    <div
                      class="c33"
                    >
                      <div
                        class="c34"
                      >
                        Car Insurance
                      </div>
                      <div
                        class="c35"
                      >
                        12/05/2020
                      </div>
                    </div>
                    <div
                      class="c33"
                    >
                      <div
                        class="c34"
                      >
                        Year
                      </div>
                      <div
                        class="c35"
                      >
                        2020
                      </div>
                    </div>
                    <div
                      class="c33"
                    >
                      <div
                        class="c34"
                      >
                        Weight
                      </div>
                      <div
                        class="c35"
                      >
                        56.00 lb
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c36"
              />
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c37"
    >
      <footer
        class="c38"
      >
        <div
          class="Footerstyles__ContentPanel-sc-e4rj2m-3"
        >
          <div
            class="c39"
          >
            <div
              class="c40"
            >
              <div
                class="c41"
              >
                <div
                  class="c42"
                >
                  <h2
                    class="c43"
                  >
                    Help & Information
                  </h2>
                  <ul
                    class="c44"
                  >
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        Help
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        Track Order
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        Delivery & Returns
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="/store-finder/store-finder"
                      >
                        Our Stores
                      </a>
                    </li>
                  </ul>
                </div>
                <div
                  class="c42"
                >
                  <h2
                    class="c43"
                  >
                    About
                  </h2>
                  <ul
                    class="c44"
                  >
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        Our Products
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        About Us
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="/content/contact"
                      >
                        Contact Us
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="#"
                      >
                        Careers
                      </a>
                    </li>
                    <li
                      class="c45"
                    >
                      <a
                        class="c46"
                        href="/wishlist/wishlist"
                      >
                        Wishlist
                      </a>
                    </li>
                  </ul>
                </div>
                <div
                  class="c42 c47"
                >
                  <div
                    class="c48"
                  >
                    <button
                      aria-label="Facebook"
                      class="c49"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="Twitter"
                      class="c49"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="YouTube"
                      class="c49"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="LinkedIn"
                      class="c49"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                    <button
                      aria-label="Instagram"
                      class="c49"
                    >
                      <svg
                        aria-label="icon"
                        fill="currentColor"
                        focusable="false"
                        height="20"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        size="24"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Footerstyles__TermsPanel-sc-e4rj2m-12"
        >
          <div
            class="c39"
          >
            <div
              class="c50"
            >
              <div
                class="c51"
              >
                Copyright © 2022 IBM All rights reserved.
              </div>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</div>
`;
